# trace

./: .gitignore  Cargo.toml  README.md
.claude/: launch.json
.github/workflows/: ci.yml  docs-deploy.yml  landing-deploy.yml  release.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/docs/: index.html  package-lock.json  package.json  vite.config.ts
apps/docs/src/: App.tsx  Doc.tsx  Markdown.tsx  content.ts  main.tsx  styles.css
apps/landing/: index.html  package-lock.json  package.json  tailwind.config.js
apps/landing/src/: App.tsx  CliSection.tsx  Download.tsx  HeroDemo.tsx  HowItWorks.tsx  HowToUse.tsx  Insights.tsx  Mark.tsx  ReplaySection.tsx  Tracey.tsx  WorksEverywhere.tsx  components.tsx  config.ts  main.tsx  styles.css  useTypedTerminal.ts
apps/landing/src/pages/: About.tsx  DesktopDownload.tsx  Home.tsx
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: App.tsx  Mark.tsx  Tracey.tsx  api.ts  components.tsx  main.tsx  styles.css
apps/web/src/pages/: CostCenter.tsx  Dashboard.tsx  GitHub.tsx  NotFound.tsx  PatchReview.tsx  PromptCompressor.tsx  RiskCenter.tsx  RollbackCenter.tsx  RunTimeline.tsx
crates/trace-cli/: Cargo.toml
crates/trace-cli/src/: colors.rs  daemon_ctl.rs  main.rs  project.rs  watcher.rs
crates/trace-cli/src/adapters/: aider.rs  claude.rs  codex.rs  cursor.rs  gemini.rs  mod.rs  opencode.rs  terminal.rs  version.rs
crates/trace-cli/src/commands/: config_cmd.rs  dashboard.rs  doctor.rs  github.rs  init.rs  integrations.rs  mod.rs  query.rs  replay.rs  rollback.rs  run.rs  scan_cmd.rs  update.rs
crates/trace-core/: Cargo.toml
crates/trace-core/src/: adapter.rs  agents.rs  config.rs  cost.rs  db.rs  diagnose.rs  git.rs  github.rs  guard.rs  ids.rs  lib.rs  models.rs  paths.rs  scan.rs  secrets.rs  time.rs
crates/trace-daemon/: Cargo.toml
crates/trace-daemon/src/: api.rs  lib.rs  main.rs  server.rs  state.rs
crates/traceguard-core/: Cargo.toml
crates/traceguard-core/src/: git.rs  github.rs  lib.rs
crates/traceguard-daemon/: Cargo.toml
crates/traceguard-daemon/src/: api.rs  assets.rs  lib.rs  main.rs  server.rs  state.rs
crates/trg-cli/: Cargo.toml
crates/trg-cli/src/: client.rs  daemon_ctl.rs  main.rs  project.rs  watcher.rs
crates/trg-cli/src/commands/: compress.rs  dashboard.rs  github.rs  init.rs  mod.rs  rollback.rs  run.rs
docs/: agent-runs.mdx  cli-commands.mdx  command-guarding.mdx  configuration.mdx  cost-tracking.mdx  docs.json  installation.mdx  limitations.mdx  local-dashboard.mdx  overview.mdx  patch-review.mdx  prompt-compression.mdx  quickstart.mdx  release-notes.mdx  rollback.mdx  secret-detection.mdx  security-model.mdx  troubleshooting.mdx  versioning.mdx
docs/integrations/: claude.mdx  codex.mdx  cursor.mdx  github.mdx  overview.mdx  vscode.mdx
firebase/: .firebaserc  firebase.json
firebase/public/: index.html
homebrew-tap/: README.md
homebrew-tap/Formula/: trace.rb  traceguard.rb
homebrew-trace/: README.md
homebrew-trace/Formula/: trace.rb
integrations/claude/: README.md  settings.snippet.json  trace-hook.sh
integrations/codex/: README.md  codex-adapter.sh
integrations/cursor/: README.md  package.json
integrations/cursor/src/: index.js
integrations/github/: README.md  action.yml
integrations/github/app/: app.manifest.json  handler.js
integrations/github/scripts/: ci-scan.sh
integrations/vscode/: README.md  extension.js  package.json
scripts/: install.ps1  install.sh
