[package]
name = "trace-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Trace CLI: local black box recorder for AI coding agents."

[[bin]]
name = "trace"
path = "src/main.rs"

[dependencies]
trace-core = { path = "../trace-core" }
trace-daemon = { path = "../trace-daemon" }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
ureq = { version = "2", features = ["json"] }
open = "5"
notify = "6"
ctrlc = "3"
