[package]
name = "traceguard-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared models, rules, and persistence for TraceGuard."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
