[package]
name = "trg-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "TraceGuard CLI: local black box recorder for AI coding agents."

# The shipped binary is `trg`. `traceguard` is provided as a long alias by the
# install scripts (symlink/copy) so we keep one compiled artifact.
[[bin]]
name = "trg"
path = "src/main.rs"

[dependencies]
traceguard-core = { path = "../traceguard-core" }
traceguard-daemon = { path = "../traceguard-daemon" }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
ureq = { version = "2", features = ["json"] }
open = "5"
notify = "6"
ctrlc = "3"
